--- a/Frontend/src/index.scss
+++ b/Frontend/src/index.scss
@@ -1,13 +1,21 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: IBM Plex Sans, serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+  background-color: #101010;
+}
+
+.container {
+  max-width: 120rem;
 }
