--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,62 @@
+/*
+--- 01 TYPOGRAPHY SYSTEM
+
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+- Font weights
+Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
+
+- Line heights
+Default: 1
+Small: 1.05
+Medium: 1.2
+Paragraph default: 1.6
+
+- Letter spacing
+-0.5px
+0.75px
+
+--- 02 COLORS
+
+- Primary:  #e67e22, #cf711f
+- Secondary: 
+
+- Tints:
+- Shades:  
+
+- Accents:
+
+- Blacks: 
+#101010
+
+- Greys
+
+#888
+#333
+#767676 (lightest grey allowed on #fff)
+#6f6f6f (lightest grey allowed on #fdf2e9)
+#555
+#333
+
+--- 05 SHADOWS
+
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+
+--- 06 BORDER-RADIUS
+
+Default: 9px
+Medium: 11px
+
+--- 07 WHITESPACE
+
+- Spacing system (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
+
 * {
   padding: 0;
   margin: 0;
@@ -166,6 +225,7 @@ body {
   max-width: 130rem;
   margin: 0 auto;
   padding: 0 3.2rem;
+  margin-bottom: -4.8rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 9.6rem;
