--- a/Frontend/src/components/signup-form/sigunup-form.styles.css
+++ b/Frontend/src/components/signup-form/sigunup-form.styles.css
@@ -3,7 +3,7 @@
 /*******************/
 
 .form-signup {
-  height: 840px;
+  height: 950px;
   width: 400px;
   background-color: rgba(255, 255, 255, 0.13);
   transform: translateX(140%);
@@ -23,6 +23,7 @@ form * {
   outline: none;
   border: none;
 }
+
 label {
   display: block;
   margin-top: 30px;
@@ -42,21 +43,5 @@ input {
   font-weight: 300;
 }
 ::placeholder {
-  color: #e5e5e5;
-}
-
-.log-nav-link:link,
-.log-nav-link:visited {
-  display: inline-block;
-  text-decoration: none;
-  color: #fff;
-  font-weight: 500;
-  font-size: 1.4rem;
-  transition: all 1s;
-  color: #e67e22;
-}
-
-.log-nav-link:hover,
-.log-nav-link:active {
-  color: #ff5b7e;
+  color: #737373;
 }
