--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -92,6 +92,14 @@ body {
   margin-bottom: 3.2rem;
 }
 
+.heading-primary-z {
+  font-size: 6.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #fff;
+  letter-spacing: -0.5px;
+}
+
 .heading-primary-sm {
   font-size: 4.8rem;
   font-weight: 700;
