--- a/Frontend/src/components/create-grp/create-grp.styles.css
+++ b/Frontend/src/components/create-grp/create-grp.styles.css
@@ -53,6 +53,15 @@ form * {
   border: none;
 }
 
+.heading-primary-sm-mod {
+  font-size: 3.6rem;
+  font-weight: 500;
+  line-height: 1.05;
+  color: #fff;
+  letter-spacing: -0.5px;
+  margin-bottom: 2.4rem;
+}
+
 label {
   display: block;
   margin-top: 30px;
