--- a/Android_App_Code/app/src/main/res/values/colors.xml
+++ b/Android_App_Code/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +7,37 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--Main colors-->
+
+    <color name="primary">#000000</color>
+
+    <color name="primaryOpposite">#ffff</color>
+
+    <color name="background">#ffff</color>
+    <color name="background_secondary">#E9E9E9</color>
+
+    <color name="accent_primary">#f60</color>
+    <color name="accent_secondary">#1F80FF</color>
+
+    <color name="editTextColorOnFocus">#ffff</color>
+    <color name="editTextColorNotOnFocus">#ffff</color>
+    <color name="Outline">#707070</color>
+
+    <color name="textPrimary">#000000</color>
+    <color name="textSecondary">#3D3D3D</color>
+
+    <color name="button">#000000</color>
+    <color name="button_secondary">#ffff</color>
+    <color name="button_accent">#f60</color>
+    <color name="roundButton">#2E000000</color>
+
+
+    <color name="dashBoardButtonColor">#E1E1E1</color>
+    <color name="dashBoardTextColor">#000</color>
+
+    <color name="err">#FF0000</color>
+
+    <color name="default_box_stroke_color" tools:overrise ="true">#707070</color>
+
 </resources>
