--- a/Frontend/src/components/clipboard/clipboard.styles.css
+++ b/Frontend/src/components/clipboard/clipboard.styles.css
@@ -13,5 +13,8 @@
   border: 4px solid #0050ff;
   cursor: pointer;
   margin: 10px;
-  margin-left: 30px;
+}
+
+.bol-clip {
+  font-weight: bold;
 }
