--- a/Frontend/src/routes/grpmember/grpmember.styles.css
+++ b/Frontend/src/routes/grpmember/grpmember.styles.css
@@ -60,8 +60,8 @@
 
 .heading-name-2 {
   font-size: 2.4rem;
-  font-weight: 700;
-  color: #fff;
+  font-weight: 500;
+  color: rgba(160, 160, 160, 0.684);
   margin-left: 5.6rem;
 }
 
