--- a/Frontend/src/routes/grpsdashboard/grpsdashboard.styles.css
+++ b/Frontend/src/routes/grpsdashboard/grpsdashboard.styles.css
@@ -47,3 +47,16 @@
   margin-right: 10px;
   margin-bottom: 10px;
 }
+
+.button-grp-in {
+  background-color: #292929;
+  border: none;
+  width: 48%;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 17px;
+  font-weight: 500;
+  margin-top: 30px;
+  padding: 20px 30px;
+  transition: all 1s;
+}
