--- a/Android_App_Code/app/src/main/res/layout/activity_log_in.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_log_in.xml
@@ -75,14 +75,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="emailAddress"
-                android:background="@drawable/edit_text_background"
-                android:fontFamily="@font/ibmplexsansregular"
-                android:hint="@string/sample_email"
                 android:inputType="textEmailAddress"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                android:hint="@string/sample_email"
+                style="@style/editText"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -99,14 +94,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="false"
-                android:background="@drawable/edit_text_background"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                style="@style/editText"/>
 
             <!--Forgot Password-->
             <LinearLayout
