--- a/Android_App_Code/app/src/main/res/layout/activity_sign_up.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_sign_up.xml
@@ -43,18 +43,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/ibmplexsanssemibold"
                 android:text="@string/sign_up"
-                android:textColor="@color/textPrimary"
-                android:textSize="40sp" />
+                android:theme="@style/text_heading"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:text="@string/sup_screen_text"
-                android:textColor="@color/textSecondary"
-                android:textSize="20sp" />
+                android:theme="@style/sub_heading"/>
 
             <!--Text Fields-->
             <TextView
@@ -73,13 +69,9 @@
                 android:layout_height="wrap_content"
                 android:autofillHints="emailAddress"
                 android:background="@drawable/edit_text_background"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:hint="@string/sample_email"
                 android:inputType="textEmailAddress"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                style="@style/editText"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -96,12 +88,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="name"
-                android:background="@drawable/edit_text_background"
                 android:hint="@string/sample_name"
                 android:inputType="textPersonName"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary" />
+                style="@style/editText"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -117,14 +106,10 @@
                 android:id="@+id/pass_sup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_background"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
                 android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                style="@style/editText"/>
 
 
             <TextView
@@ -141,16 +126,10 @@
                 android:id="@+id/regno"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_background"
-                android:drawablePadding="15sp"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:hint="@string/sample_regno"
                 android:inputType="text"
                 android:maxLength="9"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                style="@style/editText" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -166,16 +145,9 @@
                 android:id="@+id/major"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edit_text_background"
-                android:drawablePadding="15sp"
-                android:fontFamily="@font/ibmplexsansregular"
                 android:hint="@string/sample_major"
                 android:inputType="text"
-                android:maxLength="10"
-                android:padding="@dimen/edit_text_padding"
-                android:textColor="@color/primary"
-                android:textColorHint="@color/textSecondary"
-                android:textSize="20sp" />
+                style="@style/editText" />
 
 
 
