--- a/Android_App_Code/app/src/main/res/values/themes.xml
+++ b/Android_App_Code/app/src/main/res/values/themes.xml
@@ -22,16 +22,32 @@
         <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
-    <style name="outline_button_text">
-        <item name="fontFamily">@font/ibmplexsansregular</item>
+    <style name="button_dashboard_primary_text_style" parent="TextAppearance.AppCompat.Button">
+        <item name="fontFamily">@font/ibmplexsanssemibold</item>
         <item name="android:textColor">@color/textPrimary</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="button_dashboard_secondary_text_style" parent="TextAppearance.AppCompat.Button">
+        <item name="fontFamily">@font/ibmplexsanssemibold</item>
+        <item name="android:textColor">@color/background</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+
 
     <style name="text_heading">
         <item name="fontFamily">@font/ibmplexsanssemibold</item>
         <item name="android:textColor">@color/textPrimary</item>
         <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="text_heading_2">
+        <item name="fontFamily">@font/ibmplexsanssemibold</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">30sp</item>
     </style>
 
     <style name="sub_heading">
