--- a/Android_App_Code/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_welcome_screen.xml
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20sp"
-                android:background="@drawable/accentbuttonbg"
+                android:background="@drawable/button_accent"
                 android:text="@string/sup"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
