--- a/Android_App_Code/app/src/main/res/values-night/colors.xml
+++ b/Android_App_Code/app/src/main/res/values-night/colors.xml
@@ -29,4 +29,6 @@
     <color name="err">#FF0000</color>
 
     <color name="default_box_stroke_color" tools:overrise ="true">#707070</color>
+
+    <color name="opaque_background">#80000000</color>
 </resources>
