--- a/Android_App_Code/app/src/main/res/values/colors.xml
+++ b/Android_App_Code/app/src/main/res/values/colors.xml
@@ -38,6 +38,8 @@
 
     <color name="err">#FF0000</color>
 
+    <color name="opaque_background">#99FFFFFF</color>
+
     <color name="default_box_stroke_color" tools:overrise ="true">#707070</color>
 
 </resources>
