--- a/Android_App_Code/app/src/main/res/values-night/colors.xml
+++ b/Android_App_Code/app/src/main/res/values-night/colors.xml
@@ -9,7 +9,7 @@
 
 
     <color name="accent_primary">#f60</color>
-    <color name="accent_secondary">#1F80FF</color>
+    <color name="accent_secondary">#0983FE</color>
 
     <color name="editTextColorOnFocus">#000000</color>
     <color name="editTextColorNotOnFocus">#000000</color>
