--- a/Android_App_Code/app/src/main/res/values/colors.xml
+++ b/Android_App_Code/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="background_secondary">#E9E9E9</color>
 
     <color name="accent_primary">#f60</color>
-    <color name="accent_secondary">#1F80FF</color>
+    <color name="accent_secondary">#0983FE</color>
 
     <color name="editTextColorOnFocus">#ffff</color>
     <color name="editTextColorNotOnFocus">#ffff</color>
