--- a/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
@@ -38,13 +38,39 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10sp"
             android:orientation="vertical"
-            android:padding="20sp">
+            android:padding="15sp">
+
+
+            <LinearLayout
+                android:id="@+id/name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/text_heading_2"
+                    android:text="Hello Aryaman 👋"/>
+
+                <TextView
+                    android:id="@+id/name_sub_head"
+                    style="@style/sub_heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Welcome to StudyBuddy!" />
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/button_layout_first"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_below="@id/name_text"
+                android:layout_marginTop="15sp">
 
                 <Button
                     android:id="@+id/create_group_button"
@@ -53,6 +79,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="5sp"
                     android:layout_weight="1"
+                    android:padding="15sp"
                     android:background="@drawable/button_dashboard"
                     android:text="@string/create_group" />
 
@@ -63,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5sp"
                     android:layout_weight="1"
+                    android:padding="15sp"
                     android:background="@drawable/button_dashboard"
                     android:text="@string/join_group" />
 
@@ -70,13 +98,18 @@
 
             <Button
                 android:id="@+id/profile_button"
+                style="@style/button_dashboard_secondary_text_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/button_layout_first"
                 android:layout_marginTop="10sp"
                 android:background="@drawable/button_background"
-                style="@style/button_dashboard_secondary_text_style"
+                android:onClick="profile"
+                android:padding="15sp"
                 android:text="@string/profile"
-                android:layout_below="@id/button_layout_first"/>
+                tools:ignore="UsingOnClickInXml" />
+
+
 
             <LinearLayout
                 android:id="@+id/text"
@@ -107,7 +140,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10sp"
                 android:layout_below="@id/text"/>
-
 
         </RelativeLayout>
 
