--- a/Android_App_Code/app/src/main/res/values/themes.xml
+++ b/Android_App_Code/app/src/main/res/values/themes.xml
@@ -23,16 +23,16 @@
     </style>
 
     <style name="button_dashboard_primary_text_style" parent="TextAppearance.AppCompat.Button">
-        <item name="fontFamily">@font/ibmplexsanssemibold</item>
+        <item name="fontFamily">@font/ibmplexsansmedium</item>
         <item name="android:textColor">@color/textPrimary</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="button_dashboard_secondary_text_style" parent="TextAppearance.AppCompat.Button">
         <item name="fontFamily">@font/ibmplexsanssemibold</item>
         <item name="android:textColor">@color/background</item>
-        <item name="android:textSize">15sp</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -54,6 +54,12 @@
         <item name="fontFamily">@font/ibmplexsansregular</item>
         <item name="android:textColor">@color/textSecondary</item>
         <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="sub_heading_2">
+        <item name="fontFamily">@font/ibmplexsansregular</item>
+        <item name="android:textColor">@color/textSecondary</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="editText" parent="Widget.AppCompat.EditText">
