--- a/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
@@ -138,8 +138,8 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10sp"
-                android:layout_below="@id/text"/>
+                android:layout_below="@id/text"
+                android:layout_marginTop="10sp" />
 
         </RelativeLayout>
 
