--- a/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_group_details.xml
@@ -4,13 +4,279 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.GroupDetails">
+    tools:context=".activities.GroupDetails"
+    android:background="@color/background">
 
-    <TextView
-        android:id="@+id/text_heading"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_marginTop="25sp"
+        android:id="@+id/detailsLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20sp"
-        android:layout_centerInParent="true"/>
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true">
 
+        <LinearLayout
+            android:id="@+id/back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="@dimen/back_button_w"
+                android:layout_height="@dimen/back_button_h"
+                android:contentDescription="@string/back_button"
+                android:src="@drawable/ic_arrow_left"
+                android:layout_marginStart="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:layout_marginStart="5sp"
+                android:text="Dashboard"
+                android:fontFamily="@font/ibmplexsanssemibold"
+                android:textColor="@color/accent_secondary"/>
+        </LinearLayout>
+
+        <TextView
+            style="@style/page_heading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="Group" />
+    </RelativeLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/detailsLayout">
+
+        <RelativeLayout
+            android:id="@+id/group"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:orientation="vertical"
+            android:padding="15sp">
+
+            <!-- Group Name | id - group_name_container -->
+            <LinearLayout
+                android:id="@+id/group_name_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/group_name"
+                    style="@style/text_heading_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_group_name" />
+
+                <TextView
+                    android:id="@+id/group_subject"
+                    style="@style/sub_heading"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sample_subject_name" />
+
+            </LinearLayout>
+
+            <!-- Group Description -->
+
+            <LinearLayout
+                android:id="@+id/group_description_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/group_name_container"
+                android:layout_marginTop="15sp"
+                android:background="@drawable/button_dashboard"
+                android:padding="15sp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10sp"
+                    style="@style/text_heading_3"
+                    android:text="Group Description"/>
+
+                <TextView
+                    android:id="@+id/group_description"
+                    style="@style/text_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lorem_ipsum" />
+
+            </LinearLayout>
+
+            <!-- Group Members | id - members -->
+            <Button
+                android:id="@+id/members"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/group_description_container"
+                android:layout_marginTop="20sp"
+
+                android:background="@drawable/button_background"
+                android:fontFamily="@font/ibmplexsansregular"
+                android:onClick="memberList"
+                android:textAlignment="textStart"
+
+                android:drawableEnd="@drawable/ic_arrow_right"
+
+                android:paddingStart="20sp"
+                android:paddingEnd="20sp"
+                android:paddingBottom="10sp"
+                android:paddingTop="10sp"
+
+
+                android:text="@string/members"
+                android:textAllCaps="false"
+                android:textColor="@color/textTertiary"
+                android:textSize="18sp"
+                tools:ignore="UsingOnClickInXml" />
+
+            <!-- Create Quiz and Send Invite | id - group_button_container -->
+            <LinearLayout
+                android:id="@+id/group_button_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@+id/members"
+                android:layout_marginTop="15sp">
+
+                <LinearLayout
+                    android:id="@+id/create_quiz"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_group"
+                    android:padding="15sp"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="5sp"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
+
+                    <ImageView
+                        android:layout_width="@dimen/group_button_w"
+                        android:layout_height="@dimen/group_button_h"
+                        android:src="@drawable/ic_add"
+                        android:contentDescription="@string/button" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/group_button"
+                        android:text="@string/create_quiz"
+                        android:layout_marginTop="5sp"
+                        android:textAlignment="center"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/send_invite"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@drawable/button_group"
+                    android:padding="15sp"
+                    android:orientation="vertical"
+                    android:layout_marginStart="5sp"
+                    android:gravity="center"
+                    android:clickable="true"
+                    android:foreground="?attr/selectableItemBackground"
+                    tools:ignore="KeyboardInaccessibleWidget,UnusedAttribute">
+
+                    <ImageView
+                        android:layout_width="@dimen/group_button_w"
+                        android:layout_height="@dimen/group_button_h"
+                        android:src="@drawable/ic_send"
+                        android:contentDescription="@string/button" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/group_button"
+                        android:text="@string/send_invite"
+                        android:layout_marginTop="5sp"
+                        android:textAlignment="center"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <!-- Quizzes | id - quiz -->
+            <RelativeLayout
+                android:id="@+id/quiz"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/group_button_container"
+                android:layout_marginTop="15sp"
+                android:background="@drawable/button_group"
+                android:orientation="horizontal"
+
+                android:paddingStart="20sp"
+                android:paddingTop="15sp"
+                android:paddingEnd="20sp"
+                android:paddingBottom="15sp"
+
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground">
+
+                <TextView
+                    style="@style/group_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/quizzes"
+                    android:textAlignment="center" />
+
+                <LinearLayout
+                    android:id="@+id/quiz_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="end"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/quizzes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5sp"
+                        android:fontFamily="@font/ibmplexsanssemibold"
+                        android:text="@string/sample_quizzes"
+                        android:textColor="@color/accent_secondary"
+                        android:textSize="18sp" />
+
+                    <ImageView
+                        android:layout_width="@dimen/back_button_w"
+                        android:layout_height="@dimen/back_button_h"
+                        android:layout_marginStart="5sp"
+                        android:contentDescription="@string/back_button"
+                        android:src="@drawable/ic_arrow_right" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+
+            <!-- Group modules List | id - modules_list -->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/quiz"
+                android:layout_marginTop="15sp"
+                android:background="@drawable/background_recyclerview"/>
+
+
+
+
+        </RelativeLayout>
+
+    </ScrollView>
 </RelativeLayout>
