--- a/Android_App_Code/app/src/main/res/values/dimens.xml
+++ b/Android_App_Code/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="logo_w">50sp</dimen>
     <dimen name="logo_h">50sp</dimen>
     <dimen name="edit_text_padding">15sp</dimen>
+    <dimen name="back_button_w">15sp</dimen>
+    <dimen name="back_button_h">15sp</dimen>
+    <dimen name="group_button_w">15dp</dimen>
+    <dimen name="group_button_h">15dp</dimen>
 </resources>
