--- a/Android_App_Code/app/src/main/res/layout/layout_module.xml
+++ b/Android_App_Code/app/src/main/res/layout/layout_module.xml
@@ -3,70 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="15sp">
 
-    <com.google.android.material.card.MaterialCardView
-
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/moduleName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardElevation="1dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <!--
-            <TextView
-                android:id="@+id/group_index"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_height="wrap_content"
-                android:text="@string/_1"
-                android:fontFamily="@font/ibmplexsansregular"
-                android:textColor="@color/textPrimary"
-                android:textSize="20sp"
-                android:layout_marginStart="10dp"/>
-
-                -->
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/group_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/module_name"
-                    android:fontFamily="@font/ibmplexsansmedium"
-                    android:textColor="@color/textPrimary"
-                    android:textSize="25sp"
-                    android:layout_marginStart="10dp"/>
-
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"/>
-
-                <LinearLayout
-                    android:id="@+id/proceed_layout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="end"
-                    android:layout_marginEnd="10sp"/>
-
-
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+        android:text="@string/module_name"
+        android:fontFamily="@font/ibmplexsansmedium"
+        android:textColor="@color/textPrimary"
+        android:textSize="25sp"
+        android:layout_marginStart="10dp"/>
 </LinearLayout>
