--- a/Android_App_Code/app/src/main/res/layout/layout_module.xml
+++ b/Android_App_Code/app/src/main/res/layout/layout_module.xml
@@ -4,15 +4,39 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="15sp">
+    android:layout_marginBottom="10sp">
 
-    <TextView
-        android:id="@+id/moduleName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/module_name"
-        android:fontFamily="@font/ibmplexsansmedium"
-        android:textColor="@color/textPrimary"
-        android:textSize="25sp"
-        android:layout_marginStart="10dp"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/_1"
+            android:fontFamily="@font/ibmplexsansregular"
+            android:textColor="@color/textPrimary"
+            android:textSize="20sp"
+            android:layout_marginStart="20dp"/>
+
+        <TextView
+            android:id="@+id/moduleName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/module_name"
+            android:fontFamily="@font/ibmplexsansmedium"
+            android:textColor="@color/textPrimary"
+            android:textSize="20sp"
+            android:layout_marginStart="10dp"/>
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/textSecondary"
+        android:layout_marginTop="5sp"/>
 </LinearLayout>
