--- a/Android_App_Code/app/src/main/res/layout/activity_sign_up.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_sign_up.xml
@@ -19,8 +19,7 @@
         android:orientation="horizontal"
         android:layout_alignParentTop="true"
         android:paddingTop="25sp"
-        android:paddingBottom="10sp"
-        android:background="@color/opaque_background">
+        android:paddingBottom="10sp">
 
         <ImageView
 
