--- a/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_dashboard.xml
@@ -17,7 +17,8 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="horizontal"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        >
 
         <ImageView
             android:layout_width="@dimen/logo_w"
@@ -139,7 +140,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text"
-                android:layout_marginTop="10sp" />
+                android:layout_marginTop="10sp"
+                android:overScrollMode="never"/>
+
+            <TextView
+                android:id="@+id/footer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/recycler_view"
+                android:layout_marginTop="10sp"
+                style="@style/sub_heading_2"
+                android:textAlignment="center"
+                android:text="@string/footer"
+                android:onClick="footer"
+                tools:ignore="UsingOnClickInXml" />
 
         </RelativeLayout>
 
