--- a/Android_App_Code/app/src/main/res/layout/activity_log_in.xml
+++ b/Android_App_Code/app/src/main/res/layout/activity_log_in.xml
@@ -44,10 +44,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/ibmplexsansmedium"
-                android:text="@string/sign_in"
-                android:textColor="@color/textPrimary"
-                android:textSize="30sp" />
+                style="@style/text_heading"
+                android:text="@string/sign_in" />
 
             <TextView
                 android:layout_width="wrap_content"
